// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> with read only mode disabled should render correctly 1`] = `
<div
  className="Layout"
  data-testid="Layout"
>
  <div
    className="Page"
  >
    <Header />
    <div />
  </div>
  <Footer />
</div>
`;

exports[`<Layout /> with read only mode enabled should render correctly 1`] = `
<div
  className="Layout"
  data-testid="Layout"
>
  <div
    className="Page"
  >
    <div
      className="Alert"
    >
      Application is in read-only mode.
    </div>
    <Header />
    <div />
  </div>
  <Footer />
</div>
`;
